tests/lean/1081.lean.expected.out
1081.lean:7:2-7:5: error: type mismatch
  rfl
has type
  ?m = ?m : Prop
but is expected to have type
  f 0 y = y : Prop
1081.lean:23:4-23:7: error: type mismatch
  rfl
has type
  ?m = ?m : Prop
but is expected to have type
  insert a ⟨0, ⋯⟩ v = cons a v : Prop
1081.lean:22:10-22:30: error: not a `rfl`-theorem: the left-hand side
  insert a ⟨0, ⋯⟩ v
is not definitionally equal to the right-hand side
  cons a v
